--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ body {
     }
 }
 
-@media only screen and (max-width: 1440px) {
+@media (min-width: 1440px) {
     .card-wrapper {
         transform: scale(1.3);
     }
